# redact-composer

./: .gitignore  Cargo.toml  Earthfile  README.md
.github/workflows/: ci.yml
examples/: simple.rs
redact-composer/: CHANGELOG.md  Cargo.toml  README.md
redact-composer-core/: CHANGELOG.md  Cargo.toml  LICENSE
redact-composer-core/src/: error.rs  lib.rs  test.rs  timing.rs  util.rs
redact-composer-core/src/render/: mod.rs  tree.rs
redact-composer-core/src/render/context/: mod.rs  test.rs
redact-composer-derive/: CHANGELOG.md  Cargo.toml
redact-composer-derive/src/: lib.rs
redact-composer-midi/: CHANGELOG.md  Cargo.toml
redact-composer-midi/src/: gm.rs  lib.rs
redact-composer-midi/src/convert/: mod.rs  test.rs
redact-composer-musical/: CHANGELOG.md  Cargo.toml
redact-composer-musical/src/: chord.rs  interval.rs  key.rs  lib.rs  pitch_class.rs  test.rs  timing.rs
redact-composer-musical/src/note/: iter.rs  mod.rs  note_name.rs
redact-composer-musical/src/rhythm/: mod.rs  test.rs
redact-composer-musical/src/scale/: degree.rs  mod.rs  mode.rs
redact-composer-synthesis/: CHANGELOG.md  Cargo.toml
redact-composer-synthesis/src/: error.rs  lib.rs  test.rs
redact-composer-synthesis/test-resources/: tiny_sine.sf2
redact-composer/examples/: simple.rs
redact-composer/src/: lib.rs
redact-composer/src/util/: mod.rs
src/: composer.rs  error.rs  lib.rs  main.rs
src/composer/: mod.rs  render.rs  test.rs
src/composer/context/: mod.rs  test.rs
src/converters/: mod.rs  test.rs
src/musical/: midi.rs  mod.rs  test.rs  timing.rs
src/musical/rhythm/: mod.rs  test.rs
