[workspace]
resolver = "2"
members = [
    "redact-composer-derive",
    "redact-composer-core",
    "redact-composer-musical",
    "redact-composer-midi",
    "redact-composer",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
typetag = "0.2.14"
rand = "0.8.5"
log = "0.4.20"
