[package]
name = "redact-composer-derive"
description = "Derive macros for redact-composer"
version = "0.1.1"
repository = "https://github.com/dousto/redact-composer"
authors = ["Doug Stoeckmann <dousto@gmail.com>"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.43", features = ["full"] }

typetag = { optional = true, workspace = true }

[features]
default = []
serde = ["dep:typetag"]

[dev-dependencies]
typetag = { workspace = true }
