[package]
name = "redact-composer-midi"
description = "Midi domain library and converter for redact-composer"
version = "0.1.8"
repository = "https://github.com/dousto/redact-composer"
authors = ["Doug Stoeckmann <dousto@gmail.com>"]
keywords = ["redact-composer", "midi", "convert", "encode"]
categories = ["encoding", "multimedia::audio"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[dependencies]
redact-composer-core = { path = "../redact-composer-core", version = "0.2.4" }
midly = { workspace = true }
num = { version = "0.4.1", features = [] }
num-derive = { version = "0.4.1", features = [] }
num-traits = { version = "0.2.17", features = [] }
log = { workspace = true, features = [] }

serde = { optional = true, workspace = true }
typetag = { optional = true, workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:typetag"]

[dev-dependencies]
serde = { workspace = true }
typetag = { workspace = true }
