[package]
name = "redact-composer"
description = "A library for building modular musical composers."
version = "0.2.2"
repository = "https://github.com/dousto/redact-composer"
authors = ["Doug Stoeckmann <dousto@gmail.com>"]
keywords = ["compose", "music"]
categories = ["multimedia::audio", "simulation"]
readme = "../README.md"
license = "MIT"
edition = "2021"

[dependencies]
redact-composer-core = { path = "../redact-composer-core", version = "0.2.1" }

redact-composer-derive = { optional = true, path = "../redact-composer-derive", version = "0.1.1" }
redact-composer-musical = { optional = true, path = "../redact-composer-musical", version = "0.3.0" }
redact-composer-midi = { optional = true, path = "../redact-composer-midi", version = "0.1.5" }

[features]
default = ["derive", "musical", "midi", "serde"]
# Enables derive macro for Element
derive = ["dep:redact-composer-derive"]
# Provides music theory domain models and utilities
musical = [
    "dep:redact-composer-musical",
    "redact-composer-musical?/redact-composer"
]
# Provides MIDI-related elements and composition output converter
midi = ["dep:redact-composer-midi"]
# Enables serialization and deserialization of compositions via serde
serde = [
    "redact-composer-core/serde",
    "redact-composer-derive?/serde",
    "redact-composer-musical?/serde",
    "redact-composer-midi?/serde"
]

[[example]]
name = "simple"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
typetag = { workspace = true }
rand = { workspace = true }
